--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,9 @@
   .anchor-hover {
     @apply bg-slate-200 dark:bg-slate-500;
   }
+  .breakpoint-x{
+    @apply max-w-[1440px] px-2 md:px-12 mx-auto;
+  }
 }
 
 @layer base {
