--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
     @apply text-6xl md:text-8xl;
   }
   h2 {
-    @apply text-3xl md:text-5xl mb-8 md:mb-16 text-base-300 dark:text-base-200;
+    @apply text-3xl md:text-5xl mb-8 text-base-300 dark:text-base-200;
   }
   h3 {
     @apply text-2xl md:text-3xl mb-2 md:mb-4;
@@ -52,7 +52,7 @@
     @apply text-lg md:text-xl;
   }
   section {
-    @apply min-h-screen py-8;
+    @apply min-h-[70vh] py-8;
   }
 }
 :root {
